overflow fix

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -18,7 +18,7 @@ body {
 
 html {
   font-size: 62.5%;
-  overflow-x: hidden;
+  
 
   @include medium-screen {
     font-size: 50%;
